--- a/src/BusinessLogic/Resources/lang/de.json
+++ b/src/BusinessLogic/Resources/lang/de.json
@@ -181,7 +181,8 @@
     "price": "Preis",
     "select": "Auswählen",
     "save": "Speichern",
-    "cancel": "Abbrechen"
+    "cancel": "Abbrechen",
+    "accept": "Akzeptieren"
   },
   "shippingServicesSettings": {
     "filterServices": "Versanddienste filtern",
@@ -209,7 +210,6 @@
     "shippingServiceSuccessfullySaved": "Versanddienst erfolgreich gespeichert.",
     "congrats": "Glückwunsch! Ihr erster Versanddienst wurde erfolgreich erstellt.",
     "disablePreviousCarriers": "Um Ihnen den bestmöglichen Service zu bieten, ist es wichtig, dass Sie Ihre bisherigen Versanddienstleister deaktivieren. Möchten Sie, dass wir diese deaktivieren? (empfohlen)",
-    "accept": "Akzeptieren",
     "shippingMethodSuccessfullySelected.": "Versanddienst erfolgreich ausgewählt.",
     "failedToDeselectShippingMethod": "Versanddienst konnte nicht abgewählt werden.",
     "shippingMethodSuccessfullyDeselected": "Versanddienst erfolgreich abgewählt.",
