Add popup for added service
Issue: PLCR1801-47

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -162,8 +162,10 @@
     "noServicesDescription": "They will be shown to your customer at the time of checkout, so that they can choose which carrier will deliver their parcel. Set it up now so that you don't need to worry about anything else. You can change it whenever you wish, to renew or upgrade shipping services.",
     "addService": "Add service",
     "addNewService": "Add new service",
+    "addedSuccessTitle": "Shipping service added successfully",
+    "addedSuccessDescription": "You can edit the service from the <strong>\"My services\"</strong> section.",
     "deletedSuccessTitle": "Shipping service deleted successfully",
-    "deletedSuccessDescription": "You can add new services from \"Add new service\".",
+    "deletedSuccessDescription": "You can add new services from the <strong>\"Add new service\"</strong> button.",
     "pickShippingService": "Add delivery services",
     "filterModalTitle": "Filters",
     "applyFilters": "Apply filters",
