--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -16,6 +16,7 @@
     "loading": "Loading...",
     "save": "Save",
     "saveChanges": "Save changes",
+    "accept": "Accept",
     "cancel": "Cancel",
     "continue": "Continue",
     "complete": "Complete",
@@ -166,6 +167,10 @@
     "addedSuccessDescription": "You can edit the service from the <strong>\"My services\"</strong> section.",
     "deletedSuccessTitle": "Shipping service deleted successfully",
     "deletedSuccessDescription": "You can add new services from the <strong>\"Add new service\"</strong> button.",
+    "disableCarriersTitle": "You have created your first shipment service. Do you want to disable previous carriers?",
+    "disableCarriersDescription": "To provide you with a better service, it is important to <strong>disable the carriers</strong> you previously used.",
+    "successfullyDisabledShippingMethods": "Successfully disabled shipping methods.",
+    "failedToDisableShippingMethods": "Failed to disable shipping methods.",
     "pickShippingService": "Add delivery services",
     "filterModalTitle": "Filters",
     "applyFilters": "Apply filters",
@@ -231,7 +236,6 @@
     "by": "By",
     "edit": "Edit",
     "clear": "Clear",
-    "accept": "Accept",
     "selectAllCountries": "All selected countries",
     "selectCountriesHeader": "Countries supported for your <br> shipping service",
     "selectCountriesSubheader": "Select availability of at least one country and add <br> as many required"
@@ -265,8 +269,6 @@
     "shippingMethodSuccessfullyDeselected": "Shipping method successfully deselected.",
     "failedToSaveShippingMethod": "Failed to save shipping method.",
     "failedToActivateShippingMethod": "Failed to activate shipping method.",
-    "failedToDisableShippingMethods": "Failed to disable shipping methods.",
-    "successfullyDisabledShippingMethods": "Successfully disabled shipping methods.",
     "successfullyDeletedShippingMethods": "Successfully deleted shipping methods.",
     "shippingMethodsDeleteFailed": "Failed to delete shipping methods."
   },
