--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -16,7 +16,8 @@
     "loading": "Cargando...",
     "save": "Guardar",
     "saveChanges": "Guardar cambios",
-    "cancel": "Cancel",
+    "accept": "Aceptar",
+    "cancel": "Cancelar",
     "continue": "Continuar",
     "complete": "Completar",
     "add": "Añadir",
@@ -163,6 +164,10 @@
     "addNewService": "Añadir nuevo servicio",
     "addedSuccessTitle": "Servicio de envío añadido correctamente",
     "addedSuccessDescription": "Podrás editarlo desde la sección <strong>\"Mis servicios\"</strong>.",
+    "disableCarriersTitle": "Has creado tu primer servicio de envío. ¿Quieres desabilitar los transportistas anteriores?",
+    "disableCarriersDescription": "Para ofrecerte un mejor servicio, es importante <strong>desabilitar los transportistas</strong> que tenías previamente.",
+    "successfullyDisabledShippingMethods": "Servicios de envío correctamente deseleccionados.",
+    "failedToDisableShippingMethods": "Error al deshabilitar los servicios de envío.",
     "pickShippingService": "Añadir servicios de envío",
     "filterModalTitle": "Filtros",
     "applyFilters": "Aplicar",
@@ -219,14 +224,12 @@
     "reduceExplanation": "Reducir: descuenta un % al precio, lo pagarás tú.",
     "select": "Elige",
     "save": "Guardar",
-    "cancel": "Cancelar",
     "increase": "Incrementar",
     "reduce": "Reducir",
     "and": "y",
     "by": "Por",
     "edit": "Editar",
     "clear": "Borrar",
-    "accept": "Aceptar",
     "selectAllCountries": "Selecionar todos los países",
     "selectCountriesHeader": "Países permitidos para tu servicio <br> de envío",
     "selectCountriesSubheader": "Selecciona la disponibilidad de al menos un país y <br> añade tantos como necesites"
@@ -262,8 +265,6 @@
     "shippingMethodSuccessfullyDeselected": "Servicio de envío correctamente deseleccionado.",
     "failedToSaveShippingMethod": "Error al guardar el servicio de envío.",
     "failedToActivateShippingMethod": "Error al activar el servicio de envío.",
-    "failedToDisableShippingMethods": "Error al deshabilitar los servicios de envío.",
-    "successfullyDisabledShippingMethods": "Servicios de envío correctamente deseleccionados.",
     "successfullyDeletedShippingMethods": "Servicios de envío correctamente eliminados.",
     "shippingMethodsDeleteFailed": "Error al eliminar los servicios de envío."
   },
