--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -13,7 +13,10 @@
     "help": "Aide",
     "downloadSystemInfoFile": "Téléchargez le document d'information système",
     "curlIsNotInstalled": "cURL non installé ou non activé dans votre installation PHP. Cette démarche est nécessaire pour que la tâche de fond fonctionne. Veuillez l’installer et rafraîchir cette page.",
-    "loading": "Chargement en cours..."
+    "loading": "Chargement en cours...",
+    "save": "Enregistrer",
+    "cancel": "Annuler",
+    "accept": "Accepter"
   },
   "validation": {
     "requiredField": "Ce champs est obligatoire.",
@@ -153,6 +156,8 @@
     "cancelled": "Annulé"
   },
   "shippingServices": {
+    "successfullyDisabledShippingMethods": "Service d'envoi désactivé avec succès. ",
+    "failedToDisableShippingMethods": "Échec de la désactivation du service d'envoi.",
     "pickShippingService": "Add delivery services",
     "type": "Type",
     "national": "National",
@@ -179,10 +184,7 @@
     "from": "De",
     "to": "À",
     "price": "Prix",
-    "select": "Sélectionner",
-    "save": "Enregistrer",
-    "cancel": "Annuler",
-    "accept": "Accepter"
+    "select": "Sélectionner"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtrer les services",
@@ -209,14 +211,11 @@
     "gettingAvailableShippingService": "En cours d'obtention de services de livraison de Packlink PRO. Veuillez patienter un moment. ",
     "shippingServiceSuccessfullySaved": "Service de livraison enregistré avec succès.",
     "congrats": "Félicitations! Votre premier service d'envoi a été créé avec succès.",
-    "disablePreviousCarriers": "Afin de vous offrir le meilleur service possible, il est important que vous désactiviez vos transporteurs antérieurs. Voulez vous les désactiver? (Recommandé)",
     "shippingMethodSuccessfullySelected.": "Mode d'envoi sélectionné avec succès.",
     "failedToDeselectShippingMethod": "Échec de l'annulation du service d'envoi.",
     "shippingMethodSuccessfullyDeselected": "Service d'envoi annulé avec succès.",
     "failedToSaveShippingMethod": "Échec de l'enregistrement du service d'envoi.",
     "failedToActivateShippingMethod": "Échec de l'activation du service d'envoi. ",
-    "failedToDisableShippingMethods": "Échec de la désactivation du service d'envoi.",
-    "successfullyDisabledShippingMethods": "Service d'envoi désactivé avec succès. ",
     "successfullyDeletedShippingMethods": "Service d'envoi supprimé avec succès.",
     "shippingMethodsDeleteFailed": "Échec de la suppression du service d'envoi."
   },
