Add auto-configure handling
Issue: PLCR1801-48

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -172,6 +172,9 @@
     "successfullyDisabledShippingMethods": "Successfully disabled shipping methods.",
     "failedToDisableShippingMethods": "Failed to disable shipping methods.",
     "pickShippingService": "Add delivery services",
+    "failedGettingServicesTitle": "We are having troubles getting shipping services",
+    "failedGettingServicesSubtitle": "Do you want to retry?",
+    "retry": "Retry",
     "filterModalTitle": "Filters",
     "applyFilters": "Apply filters",
     "type": "Type",
