Fix styles and translations
Issue: PLCR1801-53

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -217,28 +217,24 @@
     "from": "From",
     "to": "To",
     "price": "Price",
-    "rangeTypeExplanation": "Choose whether you want to set them by weight and/or purchase price.",
+    "rangeTypeExplanation": "1. Choose whether you want to set them by weight and/or purchase price.",
     "rangeType": "Range type",
     "priceRange": "Price range",
     "weightRange": "Weight range",
     "weightAndPriceRange": "Weight and price range",
     "singlePricePolicy": "Price policy",
-    "pricePolicyExplanation": "Choose a price policy and set it up.",
+    "pricePolicyExplanation": "2. Choose a price policy and set it up.",
     "packlinkPrice": "Packlink Price",
     "percentagePacklinkPrices": "% of Packlink prices",
     "fixedPrices": "Fixed price",
     "increaseExplanation": "Increase: add a % to the price, this will be paid by the customer.",
     "reduceExplanation": "Reduce: deduct a % from the price, you will pay for it yourself.",
     "select": "Select",
-    "save": "Save",
-    "cancel": "Cancel",
     "invalidRange": "Invalid range",
-    "increase": "Increase",
-    "reduce": "Reduce",
+    "increase": "increase",
+    "reduce": "reduce",
     "and": "and",
-    "by": "By",
-    "edit": "Edit",
-    "clear": "Clear",
+    "by": "by",
     "selectAllCountries": "All selected countries",
     "selectCountriesHeader": "Countries supported for your <br> shipping service",
     "selectCountriesSubheader": "Select availability of at least one country and add <br> as many required"
