--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -211,25 +211,23 @@
     "from": "Desde",
     "to": "Hasta",
     "price": "Precio",
-    "rangeTypeExplanation": "Elige si quieres fijarlos por el peso y/o el precio de la compra.",
+    "rangeTypeExplanation": "1- Elige si quieres fijarlos por el peso y/o el precio de la compra.",
     "rangeType": "Tipo de rango",
     "priceRange": "Rango de precio",
     "weightRange": "Rango de peso",
     "weightAndPriceRange": "Rango de peso y precio",
     "singlePricePolicy": "Política de precio",
+    "pricePolicyExplanation": "2- Elige una política de precios y configúrala.",
     "packlinkPrice": "Precio Packlink",
     "percentagePacklinkPrices": "% de los precio de Packlink",
     "fixedPrices": "Precio fijo",
     "increaseExplanation": "Incrementar: añade un % al precio, lo pagará el cliente.",
     "reduceExplanation": "Reducir: descuenta un % al precio, lo pagarás tú.",
     "select": "Elige",
-    "save": "Guardar",
-    "increase": "Incrementar",
-    "reduce": "Reducir",
+    "increase": "incrementar",
+    "reduce": "reducir",
     "and": "y",
-    "by": "Por",
-    "edit": "Editar",
-    "clear": "Borrar",
+    "by": "por",
     "selectAllCountries": "Selecionar todos los países",
     "selectCountriesHeader": "Países permitidos para tu servicio <br> de envío",
     "selectCountriesSubheader": "Selecciona la disponibilidad de al menos un país y <br> añade tantos como necesites"
