Fix review issues
Issues: PLCR1801-51, PLCR1801-52

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -222,22 +222,26 @@
     "priceRange": "Price range",
     "weightRange": "Weight range",
     "weightAndPriceRange": "Weight and price range",
-    "singlePricePolicy": "Price policy",
+    "priceRangeWithData": "Price range: from €%s to €%s",
+    "weightRangeWithData": "Weight range: from %s Kg to %s Kg",
+    "weightAndPriceRangeWithData": "Weight and price range: from %s Kg to %s Kg and from €%s to €%s",
+    "singlePricePolicy": "Price policy %s",
     "pricePolicyExplanation": "2. Choose a price policy and set it up.",
     "packlinkPrice": "Packlink Price",
     "percentagePacklinkPrices": "% of Packlink prices",
     "fixedPrices": "Fixed price",
+    "percentagePacklinkPricesWithData": "% of Packlink prices: %s by %s%",
+    "fixedPricesWithData": "Fixed price: €%s",
     "increaseExplanation": "Increase: add a % to the price, this will be paid by the customer.",
     "reduceExplanation": "Reduce: deduct a % from the price, you will pay for it yourself.",
     "select": "Select",
     "invalidRange": "Invalid range",
     "increase": "increase",
     "reduce": "reduce",
-    "and": "and",
-    "by": "by",
     "selectAllCountries": "All selected countries",
     "selectCountriesHeader": "Countries supported for your <br> shipping service",
-    "selectCountriesSubheader": "Select availability of at least one country and add <br> as many required"
+    "selectCountriesSubheader": "Select availability of at least one country and add <br> as many required",
+    "usePacklinkRange": "For all other ranges, apply Packlink prices"
   },
   "shippingServicesSettings": {
     "filterServices": "Filter services",
