Extract code from edit service controller
This separates handling of specific modals from the main page.
Fixed some translations and styles.

--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -216,20 +216,21 @@
     "priceRange": "Rango de precio",
     "weightRange": "Rango de peso",
     "weightAndPriceRange": "Rango de peso y precio",
-    "priceRangeWithData": "Rango de precio: desde €%s hasta €%s",
-    "weightRangeWithData": "Rango de peso: desde %s Kg hasta %s Kg",
-    "weightAndPriceRangeWithData": "Rango de peso y precio: desde %s Kg hasta %s Kg y desde %s € hasta %s €",
+    "priceRangeWithData": "Rango de precio: desde %s€ hasta %s€",
+    "weightRangeWithData": "Rango de peso: desde %s kg hasta %s kg",
+    "weightAndPriceRangeWithData": "Rango de peso y precio: desde %s kg hasta %s kg y desde %s€ hasta %s€",
     "singlePricePolicy": "Política de precio %s",
     "pricePolicyExplanation": "2- Elige una política de precios y configúrala.",
     "packlinkPrice": "Precio Packlink",
+    "percentagePacklinkPricesWithData": "% de los precio de Packlink: %s por %s%",
     "percentagePacklinkPrices": "% de los precio de Packlink",
     "fixedPrices": "Precio fijo",
+    "fixedPricesWithData": "Precio fijo: %s€",
     "increaseExplanation": "Incrementar: añade un % al precio, lo pagará el cliente.",
     "reduceExplanation": "Reducir: descuenta un % al precio, lo pagarás tú.",
     "select": "Elige",
     "increase": "incrementar",
     "reduce": "reducir",
-    "by": "por",
     "selectAllCountries": "Selecionar todos los países",
     "selectCountriesHeader": "Países permitidos para tu servicio <br> de envío",
     "selectCountriesSubheader": "Selecciona la disponibilidad de al menos un país y <br> añade tantos como necesites",
