--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -220,18 +220,18 @@
     "rangeTypeExplanation": "1. Choose whether you want to set them by weight and/or purchase price.",
     "rangeType": "Range type",
     "priceRange": "Price range",
+    "priceRangeWithData": "Price range: from %s€ to %s€",
     "weightRange": "Weight range",
+    "weightRangeWithData": "Weight range: from %s kg to %s kg",
     "weightAndPriceRange": "Weight and price range",
-    "priceRangeWithData": "Price range: from €%s to €%s",
-    "weightRangeWithData": "Weight range: from %s Kg to %s Kg",
-    "weightAndPriceRangeWithData": "Weight and price range: from %s Kg to %s Kg and from €%s to €%s",
+    "weightAndPriceRangeWithData": "Weight and price range: from %s kg to %s kg and from %s€ to %s€",
     "singlePricePolicy": "Price policy %s",
     "pricePolicyExplanation": "2. Choose a price policy and set it up.",
     "packlinkPrice": "Packlink Price",
     "percentagePacklinkPrices": "% of Packlink prices",
-    "fixedPrices": "Fixed price",
     "percentagePacklinkPricesWithData": "% of Packlink prices: %s by %s%",
-    "fixedPricesWithData": "Fixed price: €%s",
+    "fixedPrices": "Fixed price",
+    "fixedPricesWithData": "Fixed price: %s€",
     "increaseExplanation": "Increase: add a % to the price, this will be paid by the customer.",
     "reduceExplanation": "Reduce: deduct a % from the price, you will pay for it yourself.",
     "select": "Select",
