--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -61,7 +61,7 @@
     "getToKnowYou": "Nous souhaitons mieux vous connaître afin de nous adapter à vous et de vous faire une offre sur mesure",
     "monthlyShipmentVolume": "Combien d’envois faites-vous généralement par mois?",
     "phone": "Numéro de téléphone",
-    "termsAndConditions": "IJ’accepte les <a href=\"%s\" target=\"_blank\">Conditions de service</a> et la <a href=\"%s\" target=\"_blank\">Politique de confidentialité</a> de Packlink",
+    "termsAndConditions": "<pre>IJ’accepte les <a href=\"%s\" target=\"_blank\">Conditions de service</a> et la <a href=\"%s\" target=\"_blank\">Politique de confidentialité</a> de Packlink</pre>",
     "marketingEmails": "J’autorise Packlink Shipping S.L. à m’envoyer des communications commerciales par courriel",
     "submit": "S'inscrire",
     "chooseYourCountry": "Choose your country",
